backoffice bar and beer service

--- a/demo/src/app/sidebar/sidebar.component.html
+++ b/demo/src/app/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
       <div class="logo-img">
         <img src="../../assets/img/angular2-logo.png" alt="">
       </div>
-      Flight42
+      Berap
     </a>
   </div>
   <ul class="nav">
@@ -14,39 +14,39 @@
         <p>Home</p>
       </a>
     </li>
-
-    <li>
-      <a routerLink="flights">
-        <i class="ti-arrow-top-right"></i>
-        <p>Flights</p>
-      </a>
-    </li>
 	
 	<li>
   <a routerLink="beers">
     <i class="ti-arrow-top-right"></i>
     <p>Beers</p>
   </a>
+  
+    <a routerLink="bars">
+    <i class="ti-arrow-top-right"></i>
+    <p>Bars</p>
+  </a>
+  
+    <a routerLink="beerTypes">
+    <i class="ti-arrow-top-right"></i>
+    <p>Beer type</p>
+	</a>
+	
+    <a routerLink="pairings">
+    <i class="ti-arrow-top-right"></i>
+    <p>Pairing</p>
+	</a>
+	
+    <a routerLink="payTypes">
+    <i class="ti-arrow-top-right"></i>
+    <p>Pay type</p>
+	</a>
+	
+    <a routerLink="promotions">
+    <i class="ti-arrow-top-right"></i>
+    <p>Promotions</p>
+	</a>
+  
 </li>
-
-    <!--
-    <li>
-        <a routerLink="passenger-search">
-            <i class="ti-user"></i>
-            <p>Passengers</p>
-        </a>
-    </li>
--->
-
-
-    <!--
-        <li routerLinkActive="active">
-        <a>
-            <i class="ti-close"></i>
-            <p>Hide Basket</p>
-        </a>
-        </li>
-    -->
 
   </ul>
 </div>
